@@ -49,7 +49,8 @@ Hbase Change Log
    HBASE-600   Filters have excessive DEBUG logging
    HBASE-611   regionserver should do basic health check before reporting
                alls-well to the master
-
+   HBASE-614   Retiring regions is not used; exploit or remove
+   
 Release 0.1.1 - 04/11/2008
 
   INCOMPATIBLE CHANGES
